# nwnx2-linux

./: .gitignore  CMakeLists.txt  astylerc  nwnx2lib.cpp  typedef.h
api/: CAppManager.h  CCombatInformation.h  CExoArrayList.h  CExoBase.h  CExoLinkedList.h  CExoLinkedListInternal.h  CGameEffect.h  CLastUpdateObject.h  CNWLevelStats.h  CNWSCreature.h  CNWSCreatureStats.h  CNWSModule.h  CNWSObject.h  CNWSPlaceable.h  CNWSPlayer.h  CNWSStore.h  CPathfindInformation.h  CResIFO.h  CServerExoAppInternal.h  CServerInfo.h  FunctionPtrs.cpp  FunctionPtrs.h  all.cpp  all.h  nwnstructs.h  vptr.h
core/events/: Mainloop.cpp  RunScript.cpp
core/profiler/: Profiler.cpp  Profiler.h  README.md
include/: NwnDefines.h  nwn_const.h  nwn_const_itemprop.h  nwn_const_spells.h  nwn_funcs.h
include/structs/: CAppManager.h  CCombatInformation.h  CCombatInformationNode.h  CExoStringList.h  CFeatUseListEntry.h  CGameObject_VTable.h  CLastUpdateObject.h  CNWBaseItem.h  CNWBaseItemArray.h  CNWCCMessageData.h  CNWClass.h  CNWFeat.h  CNWItemProperty.h  CNWRace.h  CNWRules.h  CNWSArea.h  CNWSAreaOfEffectObject.h  CNWSClient.h  CNWSCombatAttackData.h  CNWSCombatRound.h  CNWSCombatRoundAction.h  CNWSCreature.h  CNWSCreatureStats.h  CNWSDialog.h  CNWSDoor.h  CNWSEncounter.h  CNWSInventory.h  CNWSItem.h  CNWSModule.h  CNWSObject.h  CNWSObjectActionNode.h  CNWSPVPEntry.h  CNWSPVPEntryList.h  CNWSPlaceable.h  (+24 more)
lib/: NwnDefines.cpp  nwn_data.c
plugins/cpp/: CMakeLists.txt  NWNXCpp.cpp  NWNXCpp.h  plugin-nwcpp.cpp
plugins/cpp/handles/: hndl_PluginsLoaded.cpp  hndl_RunScript.cpp  hndl_RunScriptSituation.cpp
plugins/cpp/include/: ScriptException.h  ScriptLib.cpp  ScriptLib.h  ScriptManager.cpp  ScriptManager.h  builtins.cpp  builtins.h  consts.h  types.cpp  types.h
plugins/effects/: CMakeLists.txt  HandleFunc.cpp  LICENCE  NWNXEffects.cpp  NWNXEffects.h  README.md  funcs.h  hook_funcs.cpp  hooking.c  hooks.h  plugin-effects.cpp  pluginlink.h
plugins/effects/hooks/: h_CExoArrayList_CGameEffect_Insert.cpp  h_EffectHandlers.cpp  h_ExecuteCommandApplyEffectOnObject.cpp  h_GetScriptEffectType.cpp  h_ItempropHandlers.cpp  h_OnApplyModifyNumAttacks.cpp  h_OnRemoveModifyNumAttacks.cpp  h_RemoveBadEffects.cpp  h_SetNumIntegers.cpp  h_UpdateEffectList.cpp
plugins/effects/local/: l_GetEffectImmunity.cpp  l_GetEffectString.cpp
plugins/effects/nwn/: itempropdef.2da  itemprops.2da  nwnx_effects.mod  nwnx_effects.nss
plugins/items/: CMakeLists.txt  NWNXItems.cpp  NWNXItems.h  README.md  funcs.h  handle_request.cpp  hook_funcs.cpp  hooks.h  nwnx2.ini  plugin-items.cpp  pluginlink.h
plugins/items/funcs/: f_SetItempropHandler.cpp
plugins/items/handles/: hndl_ExamineEvent.cpp  hndl_ItemPropEvent.cpp
plugins/items/hooks/: h_CalculateBaseCosts.cpp  h_CanEquipItem.cpp  h_CanUnequipItem.cpp  h_CanUseItem.cpp  h_CheckProficiencies.cpp  h_ComputeWeight.cpp  h_GetIsHelmetHidden.cpp  h_GetMinEquipLevel.cpp  h_OnItemPropertyApplied.cpp  h_OnItemPropertyRemoved.cpp  h_UpdateAppearanceForEquips.cpp
plugins/items/local/: l_ExamineItemEvent.cpp  l_GetIsHelmetHidden.cpp  l_GetItemPropString.cpp
plugins/items/nwn/: nwnx_items.nss
plugins/physfs/: CMakeLists.txt  NWNXPhysfs.cpp  NWNXPhysfs.h
plugins/resman/: CMakeLists.txt  HookDemandRes.cpp  Hooks.cpp  NWNXResMan.cpp  NWNXResMan.h  nwnx2.ini  pluginlink.h  readme.md  resources.cpp  resources.h  util.h
plugins/resman/containers/: Bif.cpp  Bif.h  Container.h  Directory.cpp  Directory.h  Erf.cpp  Erf.h  Key.cpp  Key.h  ResmanDirectory.cpp  ResmanDirectory.h  Zip.cpp  Zip.h
plugins/resman/minizip/: unzip.c
plugins/resman/resources/: ResourceLocator.cpp  ResourceLocator.h  ResourceManager.cpp  ResourceManager.h
plugins/solstice/: CMakeLists.txt  Makefile.in  NWNXSolstice.cpp  NWNXSolstice.h  consts.h  funcs.h  handle_request.cpp  hook_functions.cpp  hooks.h  lua_funcs.cpp  lua_funcs.h  nwnx2.ini  plugin-solstice.cpp  readme.org  solstice_funcs.cpp  solstice_funcs.h
plugins/solstice/combat/: Attack.cpp  Attack.h  combat.h
plugins/solstice/funcs/: f_LoadConstants.cpp  f_RemoveObjectFromCache.cpp
plugins/solstice/handles/: hndl_ChatMessage.cpp  hndl_CombatMessage.cpp  hndl_ConversationEvent.cpp  hndl_EffectEvent.cpp  hndl_EquipEvent.cpp  hndl_Event.cpp  hndl_ItemEvent.cpp  hndl_ItemPropEvent.cpp  hndl_PluginsLoaded.cpp  hndl_RunScript.cpp  hndl_RunScriptSituation.cpp
plugins/solstice/hooks/: h_AddAttackOfOpportunity.cpp  h_CExoArrayList_CGameEffect_Insert.cpp  h_Combat.cpp  h_DoDamageImmunity.cpp  h_DoDamageReduction.cpp  h_DoDamageResistance.cpp  h_Effects.cpp  h_EquipItem.cpp  h_ExecuteCommandDestroyObject.cpp  h_ExecuteCommandDoTouchAttack.cpp  h_GetArmorClass.cpp  h_GetArmorClassVersus.cpp  h_GetCreatureDamageDice.cpp  h_GetCreatureDamageDie.cpp  h_GetCriticalHitMultiplier.cpp  h_GetCriticalHitRoll.cpp  h_GetEffectImmunity.cpp  h_GetFeatRemainingUses.cpp  h_GetFeatTotalUses.cpp  h_GetIsFlurryWeapon.cpp  h_GetMaxHitpoints.cpp  h_GetMeleeAttackBonus.cpp  h_GetMeleeDamageBonus.cpp  h_GetRangedAttackBonus.cpp  h_GetRangedDamageBonus.cpp  h_GetRunScriptReturnValue.cpp  h_GetSkillRank.cpp  h_GetTotalEffectBonus.cpp  h_GetUnarmedDamageDice.cpp  h_GetUnarmedDamageDie.cpp  h_GetWeaponAttackType.cpp  h_GetWeaponFinesse.cpp  h_InitializeNumberOfAttacks.cpp  h_LoadModuleStart.cpp  h_Polymorph.cpp  h_RemoveBadEffects.cpp  h_ResolveDamageShields.cpp  h_ResolveMeleeAttack.cpp  h_ResolveRangedAttack.cpp  h_RunScript.cpp  (+8 more)
plugins/solstice/local/: l_DeleteCreature.cpp  l_GetCombatInfo.cpp  l_GetCreature.cpp  l_GetLastChatMessage.cpp  l_GetLastCombatMsg.cpp  l_GetLastEffect.cpp  l_GetLastEffectEvent.cpp  l_GetLastEquipEvent.cpp  l_GetLastItemEvent.cpp  l_GetLastItemPropEvent.cpp  l_GetLastNWNXEvent.cpp  l_GetPoly2da.cpp  l_GetPolyEffect.cpp  l_NWNXLog.cpp  l_RunLuaScript.cpp  l_SetCombatEngineActive.cpp  l_SetDamageInfo.cpp
plugins/solstice/object/: Creature.cpp  Creature.h
plugins/solstice/profiler/: profiler.cpp  profiler.h
talib/: 2da.h  all.c  area.c  creature.c  creature.h  effects.cpp  effects.h  faction.c  init.c  nwnx_modules_ext.h  stack.c
tools/: api_dumper.py
(+168 files in other folders)
